packages/components/src/components/input-line.css
@import './input.css';

kol-input {
	display: grid;
}

input,
option,
select,
textarea {
	display: block;
	line-height: 2.5em;
	flex-grow: 1;
}
div.input {
	display: flex;
}
div.input > kol-icon {
	display: grid;
	height: var(--a11y-min-size);
	place-items: center;
	width: 2.5em;
}
input,
select:not([multiple]) {
	height: 2.75em;
}
.disabled {
	opacity: 0.5;
}

